refactor(web): cleanup (#967)
* remove unused code
* inline return
* organize import
* add final on attribute when it's possible

Co-authored-by: abirembaut <anthony.birembaut@gmail.com>