@@ -17,6 +17,8 @@ package org.bonitasoft.console.common.server.page;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+
 import org.slf4j.LoggerFactory;
 import org.slf4j.Logger;
 
@@ -72,7 +74,7 @@ public class PageDownloadServlet extends HttpServlet {
             // Set response headers
             response.setCharacterEncoding("UTF-8");
             response.setContentType("application/octet-stream");
-            final String encodedfileName = URLEncoder.encode(page.getContentName(), "UTF-8");
+            final String encodedfileName = URLEncoder.encode(page.getContentName(), StandardCharsets.UTF_8);
             final String userAgent = request.getHeader("User-Agent");
             if (userAgent != null && userAgent.contains("Firefox")) {
                 response.setHeader("Content-Disposition", "attachment; filename*=UTF-8''" + encodedfileName);
